applications/centraldashboard/upstream/components/gateway-api-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: centraldashboard
  namespace: kubeflow
spec:
  parentRefs:
  - name: centraldashboard-gateway-api
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: centraldashboard
      port: 80
